--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,14 @@
 
 .taglist .tag {
   padding: 4px 14px;
-  background: rebeccapurple;
+  background: gray;
   color: white;
   width: fit-content;
   border-radius: 4px;
   cursor: pointer;
+}
+.taglist .tag.active {
+  background: rebeccapurple;
 }
 
 .card {
@@ -36,5 +39,32 @@
   overflow: hidden;
 }
 .author p {
+  font-size: 14px;
+}
+.videodetails {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.video-player {
+  height: 400px;
+}
+.videodetails .row {
+  margin: 0 -30px;
+}
+.videodetails .row .col-8,
+.videodetails .row .col-8 {
+  padding: 0 30px;
+}
+.video-img {
+  height: fit-content;
+}
+.duration {
+  position: absolute;
+  bottom: 6px;
+  right: 14px;
+  color: red;
+}
+.video-content p {
   font-size: 14px;
 }
